Sat Dec 14 13:01:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): method by respond_to_missing? should be
	  owned by the original class.

Sat Dec 14 11:55:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/scanf.rb (IO#scanf): fix mistaken use of rescue modifier.
	  a patch by Mon_Ouie at [ruby-core:52813].  [Bug #7940]

Sat Dec 14 11:44:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_qsort): fix potential stack overflow on a large
	  machine.  based on the patch by Conrad Irwin <conrad.irwin AT
	  gmail.com> at [ruby-core:51816].  [Bug #7772]

Sat Dec 14 11:25:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_const_defined): support nested class path as
	  well as const_get.  [Feature #7414]

Sat Dec 14 01:31:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_rescue2): reuse tags pushed for body proc to protect
	  rescue proc too.

Sat Dec 14 01:15:51 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (wmap_final_func): Bugfix. Should update *value to new pointer.

Sat Dec 14 01:05:46 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: Don't test $! in "ensure" clause because
	  it may be set before the body.
	  Reported by ko1 and mrkn.  [ruby-core:59088] [Bug #9247]

	* lib/cgi/core.rb: Ditto.

	* lib/drb/ssl.rb: Ditto.

Sat Dec 14 00:34:31 2013  Naohisa Goto  <ngotogenome@gmail.com>

	* internal.h (ruby_sized_xrealloc2): fix typo introduced in r44117,
	  which cause compile error on Solaris.

Sat Dec 14 00:22:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c: (exec_recursive): use rb_catch_protect() instead of
	  rb_catch_obj() and PUSH_TAG(), and reduce pushing tags and
	  machine stack usage.

Sat Dec 14 00:18:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): achieve the original defined_class from
	  prepended iclass, to fix inherited owner.

	* proc.c (method_owner): return the defined class, but not the