@@ -1,3 +1,9 @@
+Sat Dec 14 14:42:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/logger.rb (lock_shift_log): no need to rotate the log file
+	  if it has been rotated by another process.  based on the patch
+	  by no6v (Nobuhiro IMAI) in [ruby-core:58620].  [Bug #9133]
+
 Sat Dec 14 13:01:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* proc.c (mnew_from_me): method by respond_to_missing? should be
